--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.12.3</version>
+                        <version>3.0.0-M7</version>
                         <configuration>
                             <testSourceDirectory>${basedir}/src/integration/java</testSourceDirectory>
                             <includes>
@@ -433,9 +433,9 @@
         <selenium.version>2.31.0</selenium.version>
 
         <!-- Maven plugins -->
-        <maven.compiler.version>3.0</maven.compiler.version>
-        <maven.enforcer.version>1.2</maven.enforcer.version>
-        <maven.surefire.version>2.14</maven.surefire.version>
+        <maven.compiler.version>3.10.1</maven.compiler.version>
+        <maven.enforcer.version>3.1.0</maven.enforcer.version>
+        <maven.surefire.version>3.0.0-M7</maven.surefire.version>
         <maven.war.version>2.3</maven.war.version>
         <maven.jetty.version>8.1.13.v20130916</maven.jetty.version>
         <maven.cassandra.version>1.2.1-1</maven.cassandra.version>
@@ -465,7 +465,7 @@
     </repositories>
 
     <prerequisites>
-        <maven>3.1.0</maven>
+        <maven>3.8.6</maven>
     </prerequisites>
 
     <dependencies>
